--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,7 @@
-<header class="bg-primary">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<body>
+<header th:fragment="copy" class="bg-primary">
     <div class="container h-100">
         <div class="row h-100 row align-items-center">
             <div class="col-12">
@@ -10,3 +13,5 @@
         </div>
     </div>
 </header>
+</body>
+</html>
