--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,7 @@
-<footer id="footer" class="bg-dark text-light py-5">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<body>
+<footer th:fragment="copy" id="footer" class="bg-dark text-light py-5">
     <div class="container py-5">
         <div class="row">
             <div class="col-6 col-md-6 col-lg-3 mb-2">
@@ -20,3 +23,5 @@
         </div>
     </div>
 </footer>
+</body>
+</html>
