--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<body>
+<nav th:fragment="copy" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1" aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,6 +11,14 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/index">Home</a>
             </li>
+            <li class="nav-item active">
+                <a href="/game/create/" class="btn btn-success">Add Game</a>
+            </li>
+            <li class="nav-item active">
+                <a href="/company/create/" class="btn btn-success">Add Company</a>
+            </li>
         </ul>
     </div>
 </nav>
+</body>
+</html>
