--- a/src/main/resources/templates/addGame.html
+++ b/src/main/resources/templates/addGame.html
@@ -45,7 +45,7 @@
             </select></td>
         </tr>
         <tr>
-            <td>Year :</td>
+            <td>Company :</td>
             <td><select name="comp">
                 <option th:each="company : ${companies}"
                         th:value="${company.id}"
