--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -17,7 +17,7 @@
                 <h6 class="text-uppercase">Follow us for more information</h6>
                 <ul class="nav flex-column">
                     <li>Alex Mironov</li>
-                    <li>Semen Putnikov</li>
+                    <li>Sema Putnikov</li>
                 </ul>
             </div>
         </div>
