--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -15,7 +15,7 @@
                 <a href="/game/create/" class="btn btn-success">Add Game</a>
             </li>
             <li class="nav-item active">
-                <a href="/company/create/" class="btn btn-success">Add Company</a>
+                <a href="/company/create/" style="margin-left: 5px" class="btn btn-success">Add Company</a>
             </li>
         </ul>
     </div>
