--- a/src/main/resources/templates/editCompany.html
+++ b/src/main/resources/templates/editCompany.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:form="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Home</title>
+    <title>Edit Company</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
 </head>
