--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -2,12 +2,19 @@
 <head>
     <title>Home</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
+    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+    <script>
+        function confirmDelete(this_id) {
+            if(confirm("Do you want to delete?")) {
+                window.location = '/game/delete/' + this_id;
+            }
+        };
+    </script>
 </head>
 <body>
 
-<header th:insert="~{fragments/header :: copy}"></header>
-<nav th:insert="~{fragments/menu :: copy}"></nav>
+<div th:insert="~{fragments/header :: copy}"></div>
+<div th:insert="~{fragments/menu :: copy}"></div>
 
 <table class="table table-dark">
     <thead>
@@ -29,9 +36,8 @@
             <td th:text="${game.getName()}"></td>
             <td th:text="${game.getYear()}"></td>
             <td th:text="${game.getGenre()}"></td>
-            <td><a th:href="'company/get/'+ ${game.getCompany().getId()}" th:text="${game.getCompany().getName()}"></a>
-            </td>
-            <td><a th:href="'/game/delete/'+ ${game.getId()}" class="btn btn-danger">Delete Game</a></td>
+            <td><a th:href="'company/get/'+ ${game.getCompany().getId()}" th:text="${game.getCompany().getName()}"></a></td>
+            <td><button onClick="confirmDelete(this.id)" th:id="${game.getCompany().getId()}" class="btn btn-danger">Delete Game</button></td>
             <td><a th:href="'/game/update/'+ ${game.getId()}" class="btn btn-light">Update Game</a></td>
         </tr>
     </th:forEach>
@@ -76,6 +82,6 @@
         </ul>
     </div>
 </div>
-<footer th:insert="~{fragments/footer :: copy}"></footer>
+<div th:insert="~{fragments/footer :: copy}"></div>
 </body>
 </html>
